add Adjustable class for animating parameters

--- a/src/makefile
+++ b/src/makefile
@@ -10,7 +10,7 @@ TARGET = geopulse
 VERBOSE = TRUE
 
 # Create the list of directories
-DIRS = dance scene
+DIRS = dance scene adjustable
 SOURCEDIRS = $(foreach dir, $(DIRS), $(addprefix $(SOURCEDIR)/, $(dir)))
 TARGETDIRS = $(foreach dir, $(DIRS), $(addprefix $(BUILDDIR)/, $(dir)))
 
